--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,5 +19,6 @@
     "pg": "^8.2.1",
     "sequelize": "^5.21.12",
     "sequelize-cli": "^5.5.1"
-  }
+  },
+  "description": ""
 }
